# fiduciary

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/finance-query/: SKILL.md
.claude/skills/health-check/: SKILL.md
.claude/skills/next-dollar/: SKILL.md
.claude/skills/onboard/: SKILL.md
.claude/skills/onboard/references/: example-context.md  question-bank.md
.claude/skills/spending-audit/: SKILL.md
.claude/skills/sync-data/: SKILL.md
.claude/skills/tactics/: SKILL.md
.claude/skills/weekly-report/: SKILL.md
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  pii-scan.yml  release.yml
.well-known/skills/: index.json
design/: HLD-Fiduciary.md  THREAT-MODEL.md
docs/: ADVISORY.md  HLD-Fiduciary.md  PRIVACY.md
scripts/: ingest.py  parse-statements.py  sync.sh
scripts/finance/: __init__.py  detection.py  models.py  parsers.py  repository.py
tests/: conftest.py  test_detection.py  test_models.py  test_parsers.py  test_repository.py
tests/fixtures/: sample_amex.csv  sample_capital_one.csv  sample_chase.csv  sample_plaid.json
